# restaurant_system

./: LICENSE  Models.py  README.md  auth_routes.py  banco.db  dependencies.py  main.py  order_routes.py  package-lock.json  package.json  pyproject.toml  schemas.py  server.js  tests.py
alembic/: env.py
alembic/versions/: 13247ec46d0c_add_item_in_order.py  2b9002499f63_initial_migration.py  554eb0cf0528_initial_migration.py  7fa7aa178b1f_fix_typo_in_amount_and_logic.py
public/: app.js  index.html  styles.css
src/: config.py  dependencies.py  main.py
src/domain/: entities.py  interfaces.py  use_cases.py
src/infrastructure/: security.py
src/infrastructure/db/: __init__.py  database.py  models.py  repositories.py
src/presentation/: __init__.py  schemas.py
src/presentation/routers/: __init__.py  auth.py  order.py
tests/: conftest.py  test_auth.py  test_orders.py
